<resources>
    <string name="app_name">维度影院</string>
    <string name="Pending_payment">待付款</string>
    <string name="To_pay">去付款</string>
    <string name="Completed">已完成</string>
    <string name="Sign_in">签到</string>
    <string name="Info">我的信息</string>
    <string name="Concern_about_me">我的关注</string>
    <string name="The_ticket_record">购票记录</string>
    <string name="Feedback">意见反馈</string>
    <string name="latest_version">最新版本</string>
    <string name="Logout">退出登录</string>
    <string name="COPYRIGHT">©八维移动通信学院毕业作品</string>
    <string name="Movies">电影</string>
    <string name="cinema">影院</string>
    <string name="User_Account_Pictures">用户头像</string>
    <string name="nickname">用户昵称</string>
    <string name="Sex">用户性别</string>
    <string name="birthdate">出生日期</string>
    <string name="phone">手机号</string>
    <string name="Mail">邮箱</string>
    <string name="Reset_Password">重置密码</string>
    <string name="System_Information">系统信息</string>
    <string name="ticket_Information">购票信息</string>
    <string name="film_information">电影信息</string>
    <string name="param_message">提醒信息</string>
    <string name="Feedback_success">反馈成功</string>
    <string name="Feedbacks">感谢您对维度影院的关注与支持，我们会认真处理您的反馈，尽快修复和完善相关功能。</string>
    <string name="submit">提交</string>
    <string name="zhifu">选择支付方式</string>
    <string name="weiXin">微信支付</string>
    <string name="ZhiFuBao">支付宝支付</string>
    <string name="Login">登录</string>
    <string name="disanfang">第三方账号快速登录</string>
    <string name="LoginPwd">登录密码</string>
    <string name="register">快速注册</string>
    <string name="error_netWork">糟糕，网络不给力呀！</string>
    <string name="yichang">一场电影</string>
    <string name="jinghua">净化你的灵魂</string>
    <string name="rensheng">看遍人生百态</string>
    <string name="xinling">荡涤你的心灵</string>
    <string name="dn">带您开启一段美好的电影之旅</string>
    <string name="baway">©八维移动通信学院作品</string>
    <string name="beijing">北京</string>
    <string name="remen">热门电影</string>
    <string name="jijiang">即将上映</string>
    <string name="zhenzai">正在热映</string>
    <string name="tuijian">推荐影院</string>
    <string name="fujin">附近影院</string>
    <string name="dy">电影详情</string>
    <string name="xq">详情</string>
    <string name="gp">购票</string>
    <string name="jqjj">剧情简介</string>
    <string name="yg">预告片</string>
    <string name="jz">剧照</string>
    <string name="yp">影评</string>
    <string name="xpl">写评论</string>
    <string name="fs">发送</string>
    <string name="xuanz">请选择合适的影院</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>
