<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.activity.FilmDetailsActivity">


    <RelativeLayout
        android:id="@+id/layout_detail_ress"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_15">

        <ImageView
            android:id="@+id/detail_ress"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/cinema_detail_icon_location_default" />

    </RelativeLayout>

    <TextView
        android:id="@+id/detail_ress_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_toRightOf="@id/layout_detail_ress"
        android:text="@string/beijing"
        android:textColor="@color/color333"
        android:textSize="@dimen/sp_14" />

    <RadioGroup
        android:id="@+id/detail_rg"
        android:layout_width="@dimen/dp_312"
        android:layout_height="@dimen/dp_25"
        android:layout_below="@id/layout_detail_ress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/detail_rm_movie"
            android:layout_width="@dimen/dp_83"
            android:layout_height="match_parent"
            android:background="@drawable/movie_selecter"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/remen"
            android:textColor="@color/colorfff"
            android:textSize="@dimen/sp_14" />

        <RadioButton
            android:id="@+id/detail_zz_ry"
            android:layout_width="@dimen/dp_83"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_32"
            android:background="@drawable/movie_selecter"
            android:button="@null"
            android:gravity="center"
            android:text="@string/zhenzai"
            android:textColor="@color/color333"
            android:textSize="@dimen/sp_14" />

        <RadioButton
            android:id="@+id/detail_soon"
            android:layout_width="@dimen/dp_83"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_32"
            android:background="@drawable/movie_selecter"
            android:button="@null"
            android:gravity="center"
            android:text="@string/jijiang"
            android:textColor="@color/color333"
            android:textSize="@dimen/sp_14" />

    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/detail_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/movie_rg"
        android:layout_marginTop="@dimen/dp_10" />


</RelativeLayout>